# shorty-rs

./: .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
proto/: shorty.proto
src/: main.rs  shorty.rs  shorty_mongo.rs  shorty_server.rs
